# UI_API_Project

./: .gitignore  README.md  config.json  conftest.py  playwright.config.js  pyproject.toml  pytest.ini.bak  requirements.txt
.github/workflows/: main.yml
Report/: report.html
allure-report/: index.html
allure-report/data/: behaviors.csv  behaviors.json  categories.json  packages.json  suites.csv  suites.json  timeline.json
allure-report/data/test-cases/: 113d0bd7bf623759.json  182329e3bf6c1448.json  1e7c6dec00c94990.json  235a9fd074654451.json  354fca05ed6798cb.json  435ff08db9c758bd.json  4899cf2be84c5993.json  4c1626bf540eed94.json  5c0ec3d2d1ee0507.json  5dfd6e7aa21da962.json  5fa1178bdd2f14f8.json  6371b20344545cff.json  66480e307d2ce46d.json  6e14baa17ca7b543.json  6e9756b3e516ca1b.json  7e02033d64e8e68.json  83a88d4ac2eae299.json  (+9 more)
allure-report/export/: influxDbData.txt  prometheusData.txt
allure-report/history/: duration-trend.json  history-trend.json  history.json
allure-report/widgets/: behaviors.json  severity.json  status-chart.json  suites.json  summary.json
endpoints/: accounts_endpoint.py  base_endpoint.py  customers_endpoint.py  get_customer.py  login_endpoint.py  negative_endpoint.py  transfers_endpoint.py
pages/: account_details_page.py  account_overview_page.py  base_page.py  login_page.py  transfer_funds_page.py
tests/test_api/: test_accounts.py  test_customer.py  test_customers.py  test_negative.py  test_transfers.py
tests/test_ui/: test_account_details.py  test_login.py  test_transfer.py
utils/: api_client.py  read_config.py
