[build-system]
requires = ["setuptools>=45"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-v --html=Report/report.html --self-contained-html --alluredir=reports/allure-results --tb=short --browser=chromium"
testpaths = "tests"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
playwright_page_scope = "class"
importmode = "prepend"
pythonpath = "."
markers = [
    "smoke: marks tests as smoke",
    "api: marks tests as API (requests)",
    "ui: marks tests as UI (playwright)"
]